--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "lowdb": "^1.0.0",
+    "morgan": "^1.10.0",
+    "nanoid": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "lowdb": "^1.0.0",
-    "morgan": "^1.10.0"
+    "web-vitals": "^2.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
