--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
+    "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,13 +16,20 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "cors": "^2.8.5",
+    "eslint-config-prettier": "^8.5.0",
     "express": "^4.17.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.5",
     "lowdb": "^1.0.0",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.1",
+    "postcss": "^8.4.8",
+    "postcss-loader": "^6.2.1",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -32,6 +44,8 @@
     "server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "prettier": "prettier --check",
+    "prettier:fix": "prettier --write 'src/*'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,6 +64,17 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx,css,json}": [
+      "yarn prettier:fix",
+      "git add"
     ]
   }
 }
