--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "canvasjs-react-charts": "^1.0.5",
     "cors": "^2.8.5",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.17.1",
