--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
+    "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
